Async LibLoad Crash #39445

Closed
opened 2014-03-27 02:24:41 +01:00 by mobious · 7 comments

System Information
Windows 7 Home Premium 64-bit
ATI Mobility Radeon HD 4670

Blender Version
2.70 19e627c

Short description of error
Calling LibLoad asynchronously using 'Scene' type on a file with an object containing a Controller does not appear to work and causes Blender to crash when the internal player finishes.

Exact steps for others to reproduce the error
Place start.blend and crash.blend in the same location. Open start.blend and press P to start the game engine and note that the cube does not appear. Upon pressing Esc to end the game, Blender will crash.

Attached Files
start.blend
Contains an empty which executes the following script:

import bge

path = bge.logic.expandPath('//crash.blend')
bge.logic.LibLoad(path, 'Scene', async=True)

Note that for the problem to occur, the type and async arguments must be 'Scene' and True respectively.

crash.blend
Contains a cube with one unconnected Controller (connecting the Controller to Sensors or Actuators does not appear to change anything). All Controller types, with the exception an Expression Controller were the field is left blank) appear to cause the crash.

**System Information** Windows 7 Home Premium 64-bit ATI Mobility Radeon HD 4670 **Blender Version** 2.70 19e627c **Short description of error** Calling LibLoad asynchronously using 'Scene' type on a file with an object containing a Controller does not appear to work and causes Blender to crash when the internal player finishes. **Exact steps for others to reproduce the error** Place start.blend and crash.blend in the same location. Open start.blend and press P to start the game engine and note that the cube does not appear. Upon pressing Esc to end the game, Blender will crash. **Attached Files** [start.blend](https://archive.blender.org/developer/F82798/start.blend) Contains an empty which executes the following script: ``` import bge path = bge.logic.expandPath('//crash.blend') bge.logic.LibLoad(path, 'Scene', async=True) ``` Note that for the problem to occur, the type and async arguments must be 'Scene' and True respectively. [crash.blend](https://archive.blender.org/developer/F82800/crash.blend) Contains a cube with one unconnected Controller (connecting the Controller to Sensors or Actuators does not appear to change anything). All Controller types, with the exception an Expression Controller were the field is left blank) appear to cause the crash.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @mobious

Added subscriber: @mobious
Author

Accidentally added the Addons tag to this report and am unable to remove it. Please disregard.

Accidentally added the Addons tag to this report and am unable to remove it. Please disregard.

This issue was referenced by blender/blender-addons-contrib@d050577176

This issue was referenced by blender/blender-addons-contrib@d050577176366617bcfdc86f9dd659143e024648

This issue was referenced by d050577176

This issue was referenced by d050577176366617bcfdc86f9dd659143e024648

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit d050577176.

Closed by commit d050577176.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39445
No description provided.